# ros

lab1/ex01/: commands.txt
lab2/ex01/: .bashrc
lab2/ex03/pimonov-student/: CMakeLists.txt  package.xml
lab2/ex04/: colcon_build.txt
lab2/ex05/: rosnode_info.txt  rosnode_list.txt
lab2/ex06/: cmd_vel.txt
lab2/ex07/: parameter_server.txt  rosservice_list.txt
lab2/ex08/: rqt_console.txt.csv
lab2/ex09/package/: CMakeLists.txt  package.xml
lab2/ex10/install/: local_setup.sh  setup.sh
lab2/ex10/install/my_pubsub/lib/my_pubsub/: control
lab2/ex10/install/my_pubsub/share/my_pubsub/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
lab2/ex10/log/: latest_build
lab2/ex10/src/my_pubsub/: CMakeLists.txt
lab2/ex10/src/my_pubsub/src/: text_to_cmd_vel.cpp
lab3/ex01/cpp_srvcli/: CMakeLists.txt  package.xml
lab3/ex01/cpp_srvcli/src/: client_name.cpp  service_name.cpp
lab3/ex01/service_full_name/: CMakeLists.txt  package.xml
lab3/ex02/message_turtle_commands/: CMakeLists.txt  package.xml
lab3/ex02/message_turtle_commands/action/: MessageTurtleCommands.action
lab3/ex02/turtle_commands/: CMakeLists.txt  package.xml
lab3/ex02/turtle_commands/src/: action_client.cpp  action_server.cpp
lab3/ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel.mcap
lab3/ex04/: doctor.txt
lab3/ex05/move_to_goal/: CMakeLists.txt  package.xml
lab3/ex05/move_to_goal/src/: move_to_goal.cpp
lab4/ex01/: last_transform.txt  transform.txt
lab4/ex02/: carrot.rviz
lab4/ex02/carrot_chaser/: CMakeLists.txt  package.xml
lab4/ex02/carrot_chaser/launch/: base.launch.py  carrot_chaser.launch.py
lab4/ex02/carrot_chaser/src/: broadcaster.cpp  dynamic_frame_broadcaster.cpp  listener.cpp
lab4/ex03/time_travel/: CMakeLists.txt  package.xml
lab4/ex03/time_travel/launch/: time_travel.launch.py
lab4/ex03/time_travel/src/: dynamic_frame_broadcaster.cpp  listener.cpp
lab5/ex01/: robot_display.launch.py  simple_diff_drive.urdf
lab5/ex02/: robot_display.launch.py  turtle.urdf.xacro
lab5/ex03/my_robot/robot_bringup/: CMakeLists.txt  package.xml
lab5/ex03/my_robot/robot_bringup/config/: diff_drive.rviz
lab5/ex03/my_robot/robot_description/: CMakeLists.txt
lab5/ex03/my_robot/robot_description/urdf/: robot.urdf.xacro
lab5/ex04/my_robot/robot_bringup/: CMakeLists.txt  package.xml
lab5/ex04/my_robot/robot_bringup/config/: diff_drive.rviz
lab5/ex04/my_robot/robot_bringup/launch/: diff_drive.launch.py
lab6/ex01/my_robot/robot_bringup/: package.xml
lab6/ex01/my_robot/robot_bringup/config/: diff_drive.rviz  robot_bridge.yaml
lab6/ex01/my_robot/robot_bringup/src/: movement.cpp
lab6/ex01/my_robot/robot_description/urdf/: robot.urdf.xacro
lab6/ex01/my_robot/robot_description/worlds/: world.sdf
lab6/ex02/my_robot/robot_bringup/: CMakeLists.txt
lab6/ex02/my_robot/robot_bringup/config/: diff_drive.rviz
lab6/ex02/my_robot/robot_description/urdf/: robot.urdf.xacro
lab6/ex03/my_robot/robot_bringup/config/: diff_drive.rviz  robot_bridge.yaml
lab6/ex03/my_robot/robot_bringup/launch/: robot.launch.py
lab6/ex03/my_robot/robot_description/: CMakeLists.txt  package.xml
lab6/ex03/my_robot/robot_description/urdf/: imu.urdf.xacro  robot.urdf.xacro
lab6/ex03/my_robot/robot_description/worlds/: world.sdf
lab6/ex04/my_robot/robot_bringup/: CMakeLists.txt  package.xml
lab6/ex04/my_robot/robot_bringup/config/: diff_drive.rviz  robot_bridge.yaml
lab6/ex04/my_robot/robot_bringup/src/: circle_movement.cpp  move_to_wall.cpp
lab6/ex04/my_robot/robot_description/urdf/: depth_camera.urdf.xacro  diff_drive.urdf.xacro  lidar.urdf.xacro
lab6/ex04/my_robot/robot_description/worlds/: world.sdf
lab6/ex05/my_robot/robot_bringup/src/: move_to_wall.cpp
lab6/ex05/my_robot/robot_description/urdf/: depth_camera.urdf.xacro  lidar.urdf.xacro
lab7/ex01/map/: map_tugbot_warehouse.pgm  map_tugbot_warehouse.yaml
