cmake_minimum_required(VERSION 3.8)
project(carrot_chaser)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(rclcpp REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(turtlesim REQUIRED)

add_executable(broadcaster
			   src/broadcaster.cpp)
add_executable(listener
			   src/listener.cpp)
add_executable(dynamic_frame_broadcaster
			   src/dynamic_frame_broadcaster.cpp)

ament_target_dependencies(
	broadcaster
	geometry_msgs
	rclcpp
	tf2
	tf2_ros
	turtlesim)
ament_target_dependencies(
	listener
	geometry_msgs
	rclcpp
	tf2
	tf2_ros
	turtlesim)
ament_target_dependencies(
    dynamic_frame_broadcaster
    geometry_msgs
    rclcpp
    tf2_ros)

install(TARGETS
	broadcaster
	DESTINATION lib/${PROJECT_NAME})
install(TARGETS
	listener
	DESTINATION lib/${PROJECT_NAME})
install(TARGETS
    dynamic_frame_broadcaster
    DESTINATION lib/${PROJECT_NAME})

install(DIRECTORY launch
	DESTINATION share/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
